--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@ navtitle: Work
 ---
 
 <style>
-.index-page a {
-  color: var(--primary-color);
-  font-weight: 700;}
+  .index-page a {
+    color: var(--primary-color);
+    font-weight: 700;
+  }
 </style>
 
 <!-- <p class="up">I'm here for the <a href="/paintings">ART!</a> 🎨</p> -->
 
 <h1>Welcome!</h1>
 {# <p>&nbsp;</p> #}
-{# <p class="bigger">I'm a digital product designer currently working on API management and content collaboration products at Axway. Before that I lead UX/UI Design at Accellion, and at FastPencil. I strive for simplicity, clarity, and the shortest path-to-value possible. See more about me <a href="/about">here</a>.</p>
+{# <p class="bigger">I'm a digital product designer currently working on API management and content collaboration
+  products at Axway. Before that I lead UX/UI Design at Accellion, and at FastPencil. I strive for simplicity, clarity,
+  and the shortest path-to-value possible. See more about me <a href="/about">here</a>.</p>
 
 <br><br> #}
 
@@ -31,23 +34,23 @@ navtitle: Work
   </a>
 
   <a class="module" href="publishing-platform-design">
-      <div>
-        <img src="/img/fp-home2.jpg">
-        <br>
-        <p>Self publishing platform</strong></p>
-      </div>
-    </a>
+    <div>
+      <img src="/img/fp-home2.jpg">
+      <br>
+      <p>Self publishing platform</strong></p>
+    </div>
+  </a>
 
-<a class="module" href="mobile-design">
-      <div>
-        <img src="/img/mobile-design.png">
-        <br>
-        <p>Syncplicity mobile design</strong></p>
-      </div>
-    </a>
+  <a class="module" href="mobile-design">
+    <div>
+      <img src="/img/mobile-design.png">
+      <br>
+      <p>Syncplicity mobile design</strong></p>
+    </div>
+  </a>
 
 
-<br> #}
+  <br> #}
 
   <!-- <a href="usabilitytesting">
     <div class="module">
@@ -79,16 +82,19 @@ navtitle: Work
 <p>More posts can be found in <a href="{{ '/posts/' | url }}">the archive</a>.</p> -->
 
 <p>
-Thanks for stopping by! Check out my art below and see more items over on <a href="https://www.instagram.com/olearystudios/">Instagram</a>
- <p><a href="mailto:mattosurf@gmail.com"> Email me </a> if you're interested in buying an original or print. Thanks, Matt! See more about me <a href="/about">here</a></p>
+  Thanks for stopping by! Check out my art below and see more items over on <a
+    href="https://www.instagram.com/olearystudios/">Instagram</a>
+<p><a href="mailto:mattosurf@gmail.com"> Email me </a> if you're interested in buying an original or print. Thanks,
+  Matt! See more about me <a href="/about">here</a></p>
 <p class="bolder">
-I'm going to be displaying and selling my art at the West End Celebration in Sand City California on August 26-27 - See you there! <a href="https://westendcelebration.com/">More info here</a>
+  I'm going to be displaying and selling my art at the West End Celebration in Sand City California on August 26-27 -
+  See you there! <a href="https://westendcelebration.com/">More info here</a>
 </p>
 <div id="gallery">
-<div class="grid">
+  <div class="grid">
 
     <div>
-      <a href="/img/anini_beach.jpg" ><img src="/img/anini_beach.jpg" alt="Anini beach" title="" /></a>
+      <a href="/img/anini_beach.jpg"><img src="/img/anini_beach.jpg" alt="Anini beach" title="" /></a>
       <br>
       <p>Anini beach<span style="color:var(--primary-color);"> </span></p>
     </div>
@@ -110,116 +116,116 @@ I'm going to be displaying and selling my art at the West End Celebration in San
       <br>
       <p>Greyhound Rock</p>
     </div>
-    
+
     <div>
-        <a href="/img/polihale.jpg"> <img src="/img/polihale.jpg" alt="Polihale"></a>      
-        <br>
-        <p>Polihale</p>
-      </div>
-      
-      <div>
-      <a href="/img/tunnels_beach.jpg"> <img src="/img/tunnels_beach.jpg" alt="tunnels_beach"></a>      
+      <a href="/img/polihale.jpg"> <img src="/img/polihale.jpg" alt="Polihale"></a>
+      <br>
+      <p>Polihale</p>
+    </div>
+
+    <div>
+      <a href="/img/tunnels_beach.jpg"> <img src="/img/tunnels_beach.jpg" alt="tunnels_beach"></a>
       <br>
       <p>Tunnels beach <span style="color:var(--primary-color);"></span></p>
     </div>
 
-     <div>
-        <a href="/img/beanhollow5_3560.jpg"> <img src="/img/beanhollow5_3560.jpg" alt="beanhollow5_3560"></a>      
+    <div>
+      <a href="/img/beanhollow5_3560.jpg"> <img src="/img/beanhollow5_3560.jpg" alt="beanhollow5_3560"></a>
       <br>
       <p>Cove at Bean Hollow</p>
     </div>
 
-     <div>
-        <a href="/img/breaching_in_the_bay.jpg"> <img src="/img/breaching_in_the_bay.jpg" alt="breaching_in_the_bay"></a>      
+    <div>
+      <a href="/img/breaching_in_the_bay.jpg"> <img src="/img/breaching_in_the_bay.jpg" alt="breaching_in_the_bay"></a>
       <br>
       <p>Breaching Whale</p>
     </div>
 
-      <div>
-        <a href="/img/china_cove_rock.jpg"> <img src="/img/china_cove_rock.jpg" alt="china_cove_rock"></a>      
+    <div>
+      <a href="/img/china_cove_rock.jpg"> <img src="/img/china_cove_rock.jpg" alt="china_cove_rock"></a>
       <br>
       <p>Rock at Chine Cove</p>
     </div>
 
-      <div>
-        <a href="/img/dolphins.jpg"> <img src="/img/dolphins.jpg" alt="dolphins"></a>      
+    <div>
+      <a href="/img/dolphins.jpg"> <img src="/img/dolphins.jpg" alt="dolphins"></a>
       <br>
       <p>Dolphins</p>
     </div>
 
-      <div>
-        <a href="/img/fullers_3558.jpg"> <img src="/img/fullers_3558.jpg" alt="fullers_3558"></a>      
+    <div>
+      <a href="/img/fullers_3558.jpg"> <img src="/img/fullers_3558.jpg" alt="fullers_3558"></a>
       <br>
       <p>Big Sur Surf Spot<span style="color:var(--primary-color);"> </span></p>
     </div>
 
-      <div>
-        <a href="/img/getchells.jpg"> <img src="/img/getchells.jpg" alt="getchells"></a>      
+    <div>
+      <a href="/img/getchells.jpg"> <img src="/img/getchells.jpg" alt="getchells"></a>
       <br>
       <p>Getchells Cove <span style="color:var(--primary-color);"> </span></p>
     </div>
 
-      <div>
-        <a href="/img/its_3559.jpg"> <img src="/img/its_3559.jpg" alt="its_3559"></a>      
+    <div>
+      <a href="/img/its_3559.jpg"> <img src="/img/its_3559.jpg" alt="its_3559"></a>
       <br>
       <p>Its Beach</p>
     </div>
 
-      <div>
-        <a href="/img/itsbeach_cave_3571.jpg"> <img src="/img/itsbeach_cave_3571.jpg" alt="itsbeach_cave_3571"></a>      
+    <div>
+      <a href="/img/itsbeach_cave_3571.jpg"> <img src="/img/itsbeach_cave_3571.jpg" alt="itsbeach_cave_3571"></a>
       <br>
       <p>Its Beach Cove</p>
     </div>
 
-      <div>
-        <a href="/img/lane_moon_3568.jpg"> <img src="/img/lane_moon_3568.jpg" alt="lane_moon_3568"></a>      
+    <div>
+      <a href="/img/lane_moon_3568.jpg"> <img src="/img/lane_moon_3568.jpg" alt="lane_moon_3568"></a>
       <br>
       <p>Moon over Steamer Lane</p>
     </div>
 
-      <div>
-        <a href="/img/lemon_3578.jpg"> <img src="/img/lemon_3578.jpg" alt="lemon_3578"></a>      
+    <div>
+      <a href="/img/lemon_3578.jpg"> <img src="/img/lemon_3578.jpg" alt="lemon_3578"></a>
       <br>
       <p>Lemon still life</p>
     </div>
 
-      <div>
-        <a href="/img/sweet_view.jpg"> <img src="/img/sweet_view.jpg" alt="sweet_view"></a>      
+    <div>
+      <a href="/img/sweet_view.jpg"> <img src="/img/sweet_view.jpg" alt="sweet_view"></a>
       <br>
       <p>Sweet view</p>
     </div>
 
-      <div>
-        <a href="/img/the_lane_at_sunset.jpg"> <img src="/img/the_lane_at_sunset.jpg" alt="the_lane_at_sunset"></a>      
+    <div>
+      <a href="/img/the_lane_at_sunset.jpg"> <img src="/img/the_lane_at_sunset.jpg" alt="the_lane_at_sunset"></a>
       <br>
       <p>The Lane at sunset</p>
     </div>
 
-      <div>
-        <a href="/img/off_the_lip_3.jpg"> <img src="/img/off_the_lip_3.jpg" alt="off_the_lip_3"></a>      
+    <div>
+      <a href="/img/off_the_lip_3.jpg"> <img src="/img/off_the_lip_3.jpg" alt="off_the_lip_3"></a>
       <br>
       <p>Off the lip</p>
     </div>
 
-      <div>
-        <a href="/img/pipe.jpg"> <img src="/img/pipe.jpg" alt="pipe"></a>      
+    <div>
+      <a href="/img/pipe.jpg"> <img src="/img/pipe.jpg" alt="pipe"></a>
       <br>
       <p>Pipeline</p>
     </div>
 
-      <div>
-        <a href="/img/sunset__jet_700px.jpg"> <img src="/img/sunset__jet_700px.jpg" alt="sunset__jet_700px"></a>      
+    <div>
+      <a href="/img/sunset__jet_700px.jpg"> <img src="/img/sunset__jet_700px.jpg" alt="sunset__jet_700px"></a>
       <br>
       <p>Sunset and jet</p>
     </div>
 
-      <div>
-        <a href="/img/waves_moon_3569.jpg"> <img src="/img/waves_moon_3569.jpg" alt="waves_moon_3569"></a>      
+    <div>
+      <a href="/img/waves_moon_3569.jpg"> <img src="/img/waves_moon_3569.jpg" alt="waves_moon_3569"></a>
       <br>
       <p>Waves and moon</p>
     </div>
-  
-</div>
+
+  </div>
 </div>
 
 {# <ul class="arrows">
@@ -232,23 +238,24 @@ I'm going to be displaying and selling my art at the West End Celebration in San
 
 <script>
 
-$(function(){
-		var $gallery = $('#gallery a').simpleLightbox();
+  $(function () {
+    var $gallery = $('#gallery a').simpleLightbox();
   });
-  
- </script> 
 
- 
+</script>
 
- </br>
- </br>
- </br>
- </br>
 
- <p>CONNECT WITH ME</p>
+
+</br>
+</br>
+</br>
+</br>
+
+<p>CONNECT WITH ME</p>
 
 <p><span class="jam jam-envelope"></span>&nbsp;<a href="mailto: mattosurf@gmail.com">mattosurf@gmail.com</a></p>
 
-<span class="jam jam-linkedin"></span>&nbsp;<a href="https://www.linkedin.com/in/olearystudios">/in/olearystudios</a></p>
+<span class="jam jam-linkedin"></span>&nbsp;<a href="https://www.linkedin.com/in/olearystudios">/in/olearystudios</a>
+</p>
 
 {# <span class="jam jam-twitter"></span>&nbsp;<a href="https://twitter.com/mattosurf">@mattosurf</a></p> #}
